Bug 1994356 part 1: Don't implicitly treat a tab as selected just because it is focused. r=morgan

Instead, for focused tabs, we should apply the same rules we use for options and treeitems.
Note that in browser_caching_states.js, I had to change one of the implicit selected state tests so that nothing in the container is explicitly selected in order to trigger implicit selection with these changed rules.
We have a test elsewhere in states/browser_test_selection.js which verifies that explicit selection takes precedence over implicit selection.

Differential Revision: https://phabricator.services.mozilla.com/D268660